# satisfactory-sync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/: __init__.py  api.py  config.py  storage.py  sync.py
