[project]
name = "satisfactory-sync"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ['minio', 'environ-config', 'python-dotenv', 'requests']

[project.scripts]
"ficsit-sync" = "src.sync:sync_save"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
fix = true
unsafe-fixes = true
line-length = 100
output-format = 'grouped'
target-version = 'py312'

[tool.ruff.lint]
select = ['B', 'C4', 'C90', 'E', 'F']
